* Bug [1193] Compile error: conflicting types for emalloc
* xmt -> aorg timestamp cleanup from Dave Mills, reported by Dave Hart.
* Leap/expire cleanup from Dave Mills.
(4.2.5p178) 2009/05/21 Released by Harlan Stenn <stenn@ntp.org>
* Provide erealloc() and estrdup(), a la emalloc().
* Improve ntp.conf's parser error messages.
* [Bug 320] "restrict default ignore" does not affect IPv6.
* [Bug 1192] "restrict -6 ..." reports a syntax error.
(4.2.5p177) 2009/05/18 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7)
* [Bug 1174] nmea_shutdown assumes that nmea has a unit assigned
* [Bug 1190] NMEA refclock fudge flag4 1 obscures position in timecode
* Update NMEA refclock documentation in html/drivers/driver20.html
(4.2.5p176) 2009/05/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1154] mDNS registration should be done later, repeatedly and only
  if asked for. (second try for fix)
(4.2.5p175) 2009/05/12 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC7)
* [Bug 1180] ntpd won't start with more than ~1000 interfaces
* [Bug 1182] Documentation typos and missing bits.
* [Bug 1183] COM port support should extend past COM3
* [Bug 1184] ntpd is deaf when restricted to second IP on the same net
* Clean up configure.ac NTP_CACHEVERSION interface, display cache
  version when clearing.  Fixes a regression.
(4.2.5p174) 2009/05/09 Released by Harlan Stenn <stenn@ntp.org>
* Stale leapsecond file fixes from Dave Mills.
(4.2.5p173) 2009/05/08 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC6)
(4.2.5p172) 2009/05/06 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1175] Instability in PLL daemon mode.
* [Bug 1176] refclock_parse.c does not compile without PPSAPI.
(4.2.5p171) 2009/05/04 Released by Harlan Stenn <stenn@ntp.org>
* Autokey documentation cleanup from Dave Mills.
* [Bug 1171] line editing libs found without headers (Solaris 11)
* [Bug 1173] NMEA refclock fails with Solaris PPSAPI